--- a/index.html
+++ b/index.html
@@ -6,19 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+
+
     <title>BLUMED</title>
 </head>
 <body>
-    
-    <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()" > <i class="fa fa-bars"></i>
-        </a>
-      </div>
+        <nav>
+        <div class="topnav" id="myTopnav">
+            <a href="#home" class="active">HOME</a>
+            <a href="#news">PRODUCTOS</a>
+            <a href="#contact">CONTACTO</a>
+            <a href="#about">SOBRE NOSOTROS</a>
+            </a>
+        </div>
+    </nav>
+    <header>
+        <div>
+            <ul>
+                <li></li>
+            </ul>
+        </div>
+    </header>
 
+
+
+
+
+      <!--WAVES-->
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#f0edcd" fill-opacity="1" d="M0,160L60,176C120,192,240,224,360,213.3C480,203,600,149,720,149.3C840,149,960,203,1080,224C1200,245,1320,235,1380,229.3L1440,224L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+          </svg>
+      </div>
     <footer>
       <p>©Copyright 2022 BLUMED, hecho con amor♥. Todos los derechos reservados.</p>
     </footer>
